--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
     "@astrojs/sitemap": "^3.6.0",
     "astro": "^5.15.3",
     "sharp": "^0.34.3"
+  },
+  "devDependencies": {
+    "@astrojs/tailwind": "^6.0.2",
+    "@tailwindcss/typography": "^0.5.19",
+    "tailwindcss": "^3.4.18"
   }
 }
