--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "build-and-preview": "astro build && astro preview"
+    "build-and-preview": "astro build && astro preview",
+    "new": "node scripts/new-post.js"
   },
   "dependencies": {
     "@astrojs/cloudflare": "^12.6.10",
@@ -15,6 +16,8 @@
     "@astrojs/rss": "^4.0.13",
     "@astrojs/sitemap": "^3.6.0",
     "astro": "^5.15.3",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0",
     "sharp": "^0.34.3"
   },
   "devDependencies": {
