--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "preview": "astro preview",
     "astro": "astro",
     "build-and-preview": "astro build && astro preview",
-    "new": "node scripts/new-post.js"
+    "new": "node scripts/new-post.js",
+    "admin": "node admin-server.js"
   },
   "dependencies": {
     "@astrojs/cloudflare": "^12.6.10",
@@ -16,6 +17,8 @@
     "@astrojs/rss": "^4.0.13",
     "@astrojs/sitemap": "^3.6.0",
     "astro": "^5.15.3",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "fuse.js": "^7.1.0",
     "rehype-katex": "^7.0.1",
     "remark-math": "^6.0.0",
