新增DFT和FFT的详细推导文档；更新VSCode扩展推荐配置

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,5 +3,5 @@
     "astro-build.astro-vscode",
     "unifiedjs.vscode-mdx"
   ],
-  "unwantedRecommendations": []
+  "unwantedRecommendations": [],
 }
