--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 # 强制所有文本文件使用 LF 换行符（跨平台一致性）
-* text=auto eol=lf
+* text=auto eol=lf working-tree-encoding=UTF-8
 
 # 博客文章（Markdown 文件）必须使用 LF
 *.md text eol=lf
