--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,27 @@ dist/
 # dependencies
 node_modules/
 
+# python
+__pycache__/
+*.py[cod]
+*.pyd
+.python-version
+.venv/
+venv/
+env/
+pip-wheel-metadata/
+*.egg-info/
+build/
+.pytest_cache/
+.mypy_cache/
+.ruff_cache/
+.coverage
+htmlcov/
+.tox/
+.nox/
+.hypothesis/
+model/
+
 # logs
 npm-debug.log*
 yarn-debug.log*
