--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "friends": "node scripts/manage-friends.js",
     "friends:test": "node scripts/test-friends.js",
     "admin": "node admin-server.js",
-    "fix-bold": "node scripts/fix-chinese-bold.js"
+    "fix-bold": "node scripts/fix-chinese-bold.js",
+    "update-graph": "python tools/blog-clustering/generate_embeddings.py"
   },
   "dependencies": {
     "@astrojs/cloudflare": "^12.6.10",
@@ -21,6 +22,7 @@
     "@astrojs/sitemap": "^3.6.0",
     "astro": "^5.15.3",
     "cors": "^2.8.5",
+    "echarts": "^5.5.0",
     "express": "^4.21.2",
     "fuse.js": "^7.1.0",
     "rehype-katex": "^7.0.1",
